dnl Autoconf configure script for stl.
dnl Process this file with autoconf to produce a configure script.

dnl Give AC_INIT the name of any source file in this directory.

AC_INIT(src/string.cpp)

dnl Set ucdir to the relative path to the directory containing common configure
dnl things like config.guess, install-sh, etc.  Usually set to ../util-common .

ucdir=../../../util-common

dnl The following macros shouldn't have to change.

AC_SUBST(ucdir)
ucsrcdir=${srcdir}/${ucdir}
AC_CONFIG_AUX_DIR(${ucsrcdir})
AC_PROG_CC
AC_PROG_CXX
AC_CANONICAL_SYSTEM
AC_CHECK_PROG(AR, ar, ar, ar-is-missing)
AC_PROG_RANLIB
AC_SUBST(GCC_CFLAGS)
AC_SUBST(BCC_CFLAGS)

dnl Include common shell code to check for host system and set
dnl DEFINES as appropriate.

. ${ucsrcdir}/configure.common

dnl ----------------------------------------------------------------------
dnl Check for special arguments

CFLAGS=""
GCC_CFLAGS="-Wall -pipe -ansi"
BCC_CFLAGS="-D__linux__ -d"
OPT="-O2"

AC_ARG_ENABLE(debug,
[  --enable-debug          Enable warnings and debug info],
[
    case "$enable_debug" in
	yes)
	    GCC_CFLAGS="$GCC_CFLAGS -g"
dnl	    BCC_CFLAGS="$BCC_CFLAGS -v"
dnl	    CFLAGS="$CFLAGS -D__STL_DEBUG"
	    OPT=""
	    ;;
	no)
	    ;;
	*)
	    AC_MSG_ERROR(Bad value for --enable-debug: ${enableval})
	;;
    esac
])

CFLAGS="$CFLAGS $OPT"

AC_OUTPUT(GNUmakefile:Makefile.in, [
dnl Create timestamp file so that the first invocation of make
dnl won't reconfigure.
echo timestamp > stamp-h
],
[
srcdir=$srcdir
]
)
